@@ -18,7 +18,7 @@ import java.security.cert.*;
 public class JF {
 
   public static String getVersion() {
-    return "18.1.0";
+    return "18.2.0";
   }
 
   public static void sleep(int milli) {
